Fix long title date overlap

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -243,6 +243,7 @@ h3.post-title {
   line-height: 1.1em;
   margin-bottom: 0.2em;
   margin-top: 1.5em;
+  padding-right: 3.2em;
 }
 a:hover h3.post-title {
   color: #666;
@@ -357,10 +358,14 @@ span.date-list-day {
     #main, #footer, section.comments {
         width: 90%;
     }
+    h3.post-title {
+      padding-right: 0;
+    }
     span.post-date {
       float: none;
       margin: 0;
     }
+
 }
 
 @media screen and (max-width: 720px) {
@@ -426,6 +431,7 @@ span.date-list-day {
       float: none;
       margin: 1em 0;
     }
+
 
     h3.date-list-month {
       float: none;
